docs/css/style.css
body {
	padding-top: 30px;
	padding-bottom: 30px;
	min-width: 1000px;
}

body, p, li {
}

#side {
	position: fixed;
	width: 25%;
	min-width: 250px;
}

#side .well {
	margin-right: 30px;
	overflow-y: scroll;
}

h1 {
  margin-top: 20px;
}

h2 {
  margin-top: 20px; 
}

pre {
  padding: 20px;
  margin: 20px 0;
}

hr {
	margin: 80px 0 80px 0;
}

.nav-header a {color: #000007;}

/* Let's get this party started */
::-webkit-scrollbar {
    width: 12px;
}

a {cursor: pointer;}

/* Track */
::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.0); 
    -webkit-border-radius: 10px;
    border-radius: 10px;
}
 
/* Handle */
::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px;
    border-radius: 10px;
    background: rgba(0,0,0,0.2);
}

